# OGC_LandingPage

./: .gitignore  LICENSE  README.md  license_analysis.md  pyproject.toml
cdks/apis_cdk/: app.py  cdk.context.json  setup.py
cdks/apis_cdk/api_stacks/: regional_api_gateway_stack.py
cdks/apis_cdk/my_api_landing_cdk/: api_gateway_stack.py  api_gateway_stack_us_east_1.py  main_stack.py  regional_api_gateway_stack.py
cdks/ca_cdk/: app.py  setup.py
cdks/ca_cdk/ca_stacks/: regional_api_gateway_stack.py
cdks/ca_cdk/my_ca_cdk/: main_stack.py  regional_api_gateway_stack.py
cdks/greeting_cdk/: app.py  cdk.context.json  setup.py
cdks/greeting_cdk/greeting_stacks_cdk/: api_gateway_stack.py  regional_api_gateway_stack.py
cdks/greeting_cdk/my_api_landing_cdk/: api_gateway_stack.py  api_gateway_stack_us_east_1.py
cdks/security_cdk/: __init__.py  app.py  setup.py
cdks/security_cdk/my_ap_security_cdk/: api_gateway_stack.py  api_gateway_stack_us_east_1.py
cdks/security_cdk/security_stacks_cdk/: kms_replica_stack.py  main_stack.py  regional_api_gateway_stack.py
src/ogc_landing/authorizer/: authorizer_lambda.py
src/ogc_landing/greeting/: greeting_lambda.py
src/ogc_landing/openapi/: openapi_lambda.py
src/ogc_landing/registration/: register_lambda.py
src/ogc_landing/security/: security_utils.py
src/ogc_landing/user_management/: user_management_lambda.py
src/ogc_landing/well_known/: well_known_lambda.py  (+1 more)
tests/int_tests/: test_get_public_key_from_kms.py
tests/unit_tests/: test_authorizer_lambda.py  test_greeting_lambda.py  test_well_known_lambda.py
(+14 files in other folders)
